Order Management System
Order Management System site files

--- a/CafeManagementSystem/login_page.html
+++ b/CafeManagementSystem/login_page.html
@@ -1,7 +1,7 @@
   <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
         <html xmlns="http://www.w3.org/1999/xhtml">
         <head>
-        <title>HTML Reference</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <title>Log in Order Management</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Login Page</title>
         <style>
         /* Basics */
@@ -151,7 +151,7 @@ overflow: hidden;
   			<p>
   		<img src="https://s21.postimg.org/rr60c1wlj/15134139_1283170348412735_658406093_o.jpg" alt="147974019917702" align="middle" class="auto-style1" height="924" width="2057"></p>
 &nbsp;<div id="container">
-                <form action="file:///home/students/cs/2012/akatso01/Desktop/Untitled%20Folder/table.html" method="get">
+                <form action="OrdersManagement.html" method="get">
                     <label for="loginmsg" style="color:hsla(0,100%,50%,0.5); font-family:"Helvetica Neue",Helvetica,sans-serif;"><?php  echo @$_GET['msg'];?></label>
                     <label for="username">Username:</label>
                     <input type="text" id="username" name="username">
